--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,13 +18,13 @@ variables:
   GRADLE_OPTS: "-Dorg.gradle.daemon=false"
 
 before_script:
-  - CD TourGuide
+  - cd TourGuide
   - GRADLE_USER_HOME="$(pwd)/.gradle"
   - export GRADLE_USER_HOME
 
 build:
   stage: build
-  script: gradle --build-cache assemble
+  script: gradle build
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: push
